Fixes spacing on card headers

--- a/src/EditCardText.css
+++ b/src/EditCardText.css
@@ -66,6 +66,12 @@
         margin-right: 10%;
         width:80%;
     }
+
+    .header{
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
 }
 
 @media all and (max-width: 768px){
