--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -42,9 +42,4 @@ nav button{
         width: 80%;
         margin-right:20%;
     }   
-
-}
-
-@media screen and (max-width: 480px) {
- 
 }
