--- a/src/StandardCardText.css
+++ b/src/StandardCardText.css
@@ -31,4 +31,10 @@
     .card{
         width: 100%;
     }
+
+    .header{
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
 }
